--- a/app/globals.css
+++ b/app/globals.css
@@ -44,8 +44,9 @@ body {
 		@apply min-h-full dark:bg-dark-400 bg-light-800 text-light-5;
 	}
 }
+
 .no-focus {
-@apply focus-visible:ring-0 focus-visible:ring-transparent
+	@apply focus-visible:ring-0 focus-visible:ring-transparent ;
 }
 .active-theme {
 	filter: invert(53%) sepia(98%) saturate(3332%) hue-rotate(0deg)
@@ -110,9 +111,9 @@ width: 100%;
 display: block;
 overflow-x: auto;
 color: inherit !important;
-/* Markdown End */
+}*/
 }
-
+/* Markdown End */
 /* Clerk */
 .cl-internal-b3fm6y {
 	background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
